--- a/docs/11.go/00.go基础/03.函数.md
+++ b/docs/11.go/00.go基础/03.函数.md
@@ -43,6 +43,68 @@ any类型其实就是空接口，是go1.18新增的特性。
 
 
 
+函数名,参数列表,返回值列表,函数体
+
+
+
+参数列表,返回值列表,
+1. 多个连续的参数,可以简写,
+2. go语言不支持默认参数,
+3. 不定参数.
+
+
+
+返回值
+go语言支持多值返回,
+命名参数
+
+如果多值返回时,一般将错误类型作为最后一个返回值.
+
+
+
+## 函数签名
+
+函数类型又叫函数签名,一个函数的类型就是函数定义首行去掉函数名,参数名和{,可以使用fmt.Println格式化参数打印函数的类型.
+
+```go
+
+```
+
+
+函数是头等公民.
+
+
+匿名函数
+
+
+
+## defer关键字
+
+go函数里提供了defer关键字,可以注册多个延迟调用--多个延迟调用以前进后出的顺序在函数返回前被执行.
+
+> defer常用于保证一些资源最终一定能够得到回收和释放.
+
+1. defer后面必须是函数或方法调用.
+2. 必须先注册后使用.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
