--- a/docs/11.go/01.go基础/03.函数.md
+++ b/docs/11.go/01.go基础/03.函数.md
@@ -64,7 +64,7 @@ go语言支持多值返回,
 
 ## 函数签名
 
-函数类型又叫函数签名,一个函数的类型就是函数定义首行去掉函数名,参数名和{,可以使用fmt.Println格式化参数打印函数的类型.
+函数类型又叫函数签名,一个函数的类型就是函数定义首行去掉函数名,参数名和`{`,可以使用fmt.Println格式化参数打印函数的类型.
 
 ```go
 
