--- a/docs/02.js&ts/01.es5/文件上传.md
+++ b/docs/02.js&ts/01.es5/文件上传.md
@@ -47,8 +47,10 @@ https://juejin.cn/post/6844903757654786061
 
 # 多文件上传
 
-<input type="file" multiple >
 
+```html
+<input type="file" multiple >
+```
 
 
 
