--- a/docs/02.js&ts/关于h5.md
+++ b/docs/02.js&ts/关于h5.md
@@ -1,1 +1,7 @@
+
+
+1. 屏蔽h5页面双击放大
+
+```html
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+```
