--- a/docs/11.go/00.go基础/05.接口.md
+++ b/docs/11.go/00.go基础/05.接口.md
@@ -14,6 +14,78 @@ type hello interface{
 ```
 
 
+接口名通常以er结尾，如io包下的reader接口，writer接口
+
+
+
+
+
+方法与函数的区别
+函数是独立的代码段，而方法是依附于特定类型--如结构体，接口类型，的函数
+
+形式上，方法的定义相比函数，多了一个接收者，位于函数名之前。
+
+
+
+
+## 接口初始化
+
+单纯的声明一个接口变量是没有任何意义的，只有在被初始化为具体的类型时才有意义。
+
+> 没有初始化的接口变量，其默认值是nil，
+
+关于nil是什么
+
+```go title="buildin.go"
+// nil is a predeclared identifier representing the zero value for a
+// pointer, channel, func, interface, map, or slice type.
+var nil Type // Type must be a pointer, channel, func, interface, map, or slice type
+```
+
+
+
+基础类型中的复合类型是什么鬼？
+
+复合类型属于基础类型吗?
+
+
+
+## 接口的动态类型和静态类型
+
+
+
+静态类型
+接口在被定义时，其类型就已经被确定，这个类型叫接口的接口的静态类型
+
+接口的静态类型其本质上就是接口的方法签名的集合。如果两个接口的方法签名集合相同，则这两个接口在语义上完全等价，两者之间不需要强制类型转化就可以相互赋值。
+
+> go编译器校验接口是否能赋值，就是比较两者的方法集。
+
+
+
+
+## 接口的运算
+
+### 类型断言
+
+类型断言的语法形式
+i.(TypeName)
+
+- i必须是接口变量
+- TypeName可以是接口类型名，也可以是具体类型名
+
+1)如果Typename是具体类型名，则类型断言用
+
+
+
+### 类型查询
+
+接口类型查询的语法格式如下:
+
+
+
+
+
 
 
 
