--- a/docs/11.go/01.go基础/05.接口.md
+++ b/docs/11.go/01.go基础/05.接口.md
@@ -4,17 +4,137 @@
 
 接口是一种规范，一组方法签名的集合。
 
+之前介绍的类型都是具体类型,而接口,称之为抽象类型.
+
+> 知道了一个具体类型,就知道他是什么,能干什么.
 
 
-之前介绍的类型都是具体类型,
 
-知道了一个具体类型,就知道他是什么,能干什么.
 
-接口,称之为抽象类型.
 
-字符串格式化函数
-fmt.Printf,fmt.Sprintf,
-前者把结果发到标准输出,后者吧结果以string类型返回.
+
+## 研究一下打印包--print库
+
+
+字符串格式化函数--fmt.Printf,fmt.Sprintf,
+
+fmt.Printf,前者把结果发到标准输出,
+fmt.Sprintf,后者吧结果以string类型返回.
+
+
+
+
+fmt.Print,
+fmt.Println,
+fmt.Printf,
+
+
+
+fmt.Print与fmt.Println的区别就是doPrint与doPrintln的区别？
+
+
+
+
+
+
+```go title="print.go"
+// Print formats using the default formats for its operands and writes to standard output.
+// Spaces are added between operands when neither is a string.
+// It returns the number of bytes written and any write error encountered.
+func Print(a ...any) (n int, err error) {
+	return Fprint(os.Stdout, a...)
+}
+
+
+// Println formats using the default formats for its operands and writes to standard output.
+// Spaces are always added between operands and a newline is appended.
+// It returns the number of bytes written and any write error encountered.
+func Println(a ...any) (n int, err error) {
+	return Fprintln(os.Stdout, a...)
+}
+
+// Printf formats according to a format specifier and writes to standard output.
+// It returns the number of bytes written and any write error encountered.
+func Printf(format string, a ...any) (n int, err error) {
+	return Fprintf(os.Stdout, format, a...)
+}
+
+
+func Sprintf(format string, a ...any) string {
+	p := newPrinter()
+	p.doPrintf(format, a)
+	s := string(p.buf)
+	p.free()
+	return s
+}
+
+
+
+// Fprintf formats according to a format specifier and writes to w.
+// It returns the number of bytes written and any write error encountered.
+func Fprintf(w io.Writer, format string, a ...any) (n int, err error) {
+	p := newPrinter()
+	p.doPrintf(format, a)
+	n, err = w.Write(p.buf)
+	p.free()
+	return
+}
+
+
+// Fprint formats using the default formats for its operands and writes to w.
+// Spaces are added between operands when neither is a string.
+// It returns the number of bytes written and any write error encountered.
+func Fprint(w io.Writer, a ...any) (n int, err error) {
+	p := newPrinter()
+	p.doPrint(a)
+	n, err = w.Write(p.buf)
+	p.free()
+	return
+}
+
+
+// Fprintln formats using the default formats for its operands and writes to w.
+// Spaces are always added between operands and a newline is appended.
+// It returns the number of bytes written and any write error encountered.
+func Fprintln(w io.Writer, a ...any) (n int, err error) {
+	p := newPrinter()
+	p.doPrintln(a)
+	n, err = w.Write(p.buf)
+	p.free()
+	return
+}
+
+
+func (p *pp) doPrint(a []any) {
+	prevString := false
+	for argNum, arg := range a {
+		isString := arg != nil && reflect.TypeOf(arg).Kind() == reflect.String
+		// Add a space between two non-string arguments.
+		if argNum > 0 && !isString && !prevString {
+			p.buf.writeByte(' ')
+		}
+		p.printArg(arg, 'v')
+		prevString = isString
+	}
+}
+
+// doPrintln is like doPrint but always adds a space between arguments
+// and a newline after the last argument.
+func (p *pp) doPrintln(a []any) {
+	for argNum, arg := range a {
+		if argNum > 0 {
+			p.buf.writeByte(' ')
+		}
+		p.printArg(arg, 'v')
+	}
+	p.buf.writeByte('\n')
+}
+```
+
+
+fmt.Printf,前者把结果发到标准输出,
+
+
 
 格式化时两个函数中最复杂的部分,如果仅仅因为两个函数在输出方式上的轻微差异,就需要把格式化部分在两个函数中重复一遍,那就太糟糕了.
 
