--- a/docs/02.js&ts/02.es6/01.精度丢失.md
+++ b/docs/02.js&ts/02.es6/01.精度丢失.md
@@ -30,3 +30,22 @@ function diff(...nums){
 	return (nums[0]*coefficient- sum)/coefficient;
 }
 ```
+
+
+## 现象
+
+
+
+## 原因分析
+
+
+## 解决方案
+
+
+1. mathjs
+
+
+
+
+2. big.js
+
