--- a/docs/11.go/01.go基础/01.数据类型.md
+++ b/docs/11.go/01.go基础/01.数据类型.md
@@ -3,236 +3,148 @@
 
 ## 第一个go程序
 
-go源文件是以.go为后缀的文件,新建一个hello.go文件,写入如下内容:
 
-```go title="hello.go"
-package main
+字面量
 
-import "fmt"
+常量,
+变量,
 
-func main() {
-	fmt.Println("hello go world")
-}
-```
+> 常量必须在声明时初始化.
 
-执行go build hello.go,会生成一个hello.exe文件,然后执行hello
 
-1. main包是go语言中的入口包,main方法是入口函数
+var
+const,
 
-在go语言中定义函数使用关键字--`func`
+atoi
 
 
-导入包,使用import关键字,
-以换行打印任意类型的,
 
+无类型常量,无类型缺省 
 
 
 
-1. 标识符,区分带大小写
-2. 
 
+## 变量
 
+var声明创建一个具体类型的变量,
 
-token可以分为关键字,标识符,操作符,分隔符和字面常量.
+var name type = expression;
 
 
 
-关键字和标识符的区别.
+1. 变量的初始化
+2. 零值机制
+3. 变量的作用域
 
 
 
-分隔符,关键字,标识符,操作符,字面常量
+## 类型的零值
 
+数值类型的零值,0
+字符串类型的零值,空字符串
+布尔类型的零值,false
 
+对于接口和引用类型的零值是nil
 
+如error类型是的默认值就是nil.
 
+所谓零值,其实就是不同类型的默认值
+go语言的零值机制,保障了所有的变量是良好定义的.
 
 
 
 
-1. 不允许出现未使用的包,未使用的变量
 
+完整格式
 
+短变量声明,
 
+限制,只能用于函数内的,局部变量声明
 
-## 数据类型
 
-go语言内置的七种基本数据类型
-整型，
-浮点型，
-字符，rune
-字符串，
-布尔类型
 
-复数类型，
 
-error类型，
 
 
-> 在go语言中，布尔类型不能和整型进行相互转化。
-
-
-go语言的数据类型分为7类
-1. 整型
-2. 浮点型
-3. 复数类型
-4. 字符
-4. 字符串
-6. 布尔
-7. error
-
-
-
-在go语言中完整的变量声明语法
-var 
-零值,不同类型的默认值
-
-
-
-
-
-字符串转数值
-
-数值转字符串
-
-
-## 字符串类型
-
-go语言原生支持字符串.
-
-
-常量,一旦声明,就无法变更.
-
-
-
-1. 求字符串的长度
-2. 字符串的拼接
-
-
-
-
-```go
-const (
-	a=1<<iota
-	b=1<<iota
-	c=3
-	d=1<<iota
-);
-```
-
-
-
-
-为什么要区分类型
-不同的类型,占用的空间不同,
-
-
-1. 变量的可见性
-2. 变量的生命周期
-3. 
-
-
-
-## 布尔类型
-
-布尔类型只有两个值,true和false,true和false是go内置的预声明标识符
-
-> 在go语言中,布尔类型和整型数据是不能相互转化的.
-
-
-
-
-## 整型
-
-rune,是系统内置的uint8的别名类型
-
-
-
-
-rune类型
-
-
-
-
-
-
-# 数组与切片
-
-go语言的数组的定长性和值拷贝限制了其使用场景。为了弥补数组的定长性不足，go提供了另一种数据类型slice，译为切片，是一种变长数组，其数据结构中有指向数组的指针，所以是一种引用类型。
-
-
-
-
-数组与切片的区别
-1. 数组是定长的，切片是变长
-2. 数组是值类型，切片是引用类型
-
-
-
-切片的属性
-len，元素长度，
-cap，容量
-
-`len<=cap`,
-
-
-```go title="src/slice.go"
-type slice struct {
-	array unsafe.Pointer
-	len   int
-	cap   int
-}
-```
-
-
-## 切片的创建方式
-
-1. 由数组创建
-
-[n:m],
-[n:],
-[:m],
-
-2. 通过内置函数make创建切片
-make([]int,10);
-
-需要研究事项，make函数是如何实现参数cap是可选的呢?
-
-
-len,获取切片长度
-cap,获取切片底层数组的容量，
-append，对切片追加元素
-copy，复制一个切片。
-
-
-
-
-## map类型
-map就是key-value的集合，
-
-map是引用类型，
-关于key，
-1. key是唯一的不可重复
-2. key是任意可以比较的类型
-
-什么是可以进行比较的类型。
-
-
-
-map的创建
-1. 字面量
-2. make内置函数
-
+批量声明,批量赋值
 ```go
 
 ```
+## 变量
 
 
-> 注意事项:
-go内置的map并不是并发安全的,并发安全的map可以使用标准包sync中的map.
+##  变量的声明
+
+1. 
+2. 短变量声明
+3. new函数
+
+
+
+批量定义
+
+
+
+# 变量的赋值
+
+
+多重赋值
+
+
+
+## 变量的生命周期
+
+什么是生命周期
+
+
+
+go语言中的变量,分为两种
+1. 包级别变量,存在于整个程序的执行时间
+2. 函数级别变量,
+
+> 函数级别的变量除在函数体内显式声明的变量,函数参数和函数放回值也属于变量.
 
 
 
 
 
 
+
+
+## 生命周期
+
+
+## 作用域
+
+作用域,是编译时属性
+生命周期,是运行时属性.
+
+
+
+语法块,
+是由大括号围起来的一个语句序列.
+
+> 在语法块内部声明的变量对语法块外部是不可见的,
+
+
+
+闭包
+
+
+
+1. 重复定义,一个标识符只能使用一次.
+2. 变量定义了必须使用,否则就无需定义;包导入了必须使用,如果导入了
+3. nil
+
+
+
+
+
+
+
+## 包,
+
+go语言以包来组织,库和模块的,支持模块化,封装,编译隔离和重用.
+
+
+导入导出,以
