--- a/docs/11.go/01.go基础/01.数据类型.md
+++ b/docs/11.go/01.go基础/01.数据类型.md
@@ -1,5 +1,112 @@
 
 
+## 字面常量
+编程语言中,表示固定值的符号叫做字面常量,简称字面量.
+
+
+
+字符型字面量
+字符串字面量
+
+> go语言中的字面量,只能表达基本类型的值,不支持用户定义的字面量.
+
+
+## 变量与常量
+
+
+高级语言,
+
+变量的声明,
+
+1. 完全声明
+2. 
+
+go语言中的变量,在声明之后就会立即为其分配空间.
+
+在其他语言强类型语言中,一般分为声明与赋值两个步骤,那go语言立即为类型分配空间,那为变量分配的什么值呢?
+
+
+
+变量的赋值,
+
+变量的赋值
+
+多重赋值,
+在go语言中,支持多重赋值,所谓多重赋值,是指一次性为多个变量赋值.
+
+
+
+
+go语言中的函数,允许多返回值,
+
+如果需要指定位的返回值,可使用空白操作符--`_`,
+
+
+# 类型声明,
+
+使用type关键字进行
+
+
+go语言内置的类型别名--byte和rune
+
+```go
+// byte is an alias for uint8 and is equivalent to uint8 in all ways. It is
+// used, by convention, to distinguish byte values from 8-bit unsigned
+// integer values.
+type byte = uint8
+
+// rune is an alias for int32 and is equivalent to int32 in all ways. It is
+// used, by convention, to distinguish character values from integer values.
+type rune = int32
+```
+
+注意类型别名与自定义类型的区别
+
+类型别名是为了程序员开发过程中,更具有语义化,但在程序编译过后会将其还原为原始类型.
+
+
+
+
+## 变量
+
+### 可见性
+
+1. 包级标识符
+
+在go语言中,在.go源文件中的顶层代码中,定义的标识符称之为`包级标识符`.
+
+包级标识符如果首字母大写,可在包外可见,如果首字母小写,则包内可见.
+
+
+2. 
+
+
+
+## 常量
+
+常量是一种表达式,其可以保障在编译阶段就计算出表达式的值.
+
+所有常量本质上都属于基本类型,字符串,数字和布尔.
+
+
+
+1. iota,
+
+
+
+
+无类型常量
+```go
+
+```
+
+
+
+
+
+
+
+
 
 ## 第一个go程序
 
