--- a/docs/11.go/01.go基础/04.类型系统3.md
+++ b/docs/11.go/01.go基础/04.类型系统3.md
@@ -1,6 +1,69 @@
 
 
+## 类型
+
+
+
+### 数值类型--12种
+
+go语言内置了12种整数类型，
+
+int，uint，
+int8，uint8，
+int16，uint16，
+int32，uint32
+int64，uint64
+byte，uintptr，
+
+其中byte是uint8的类型别名
+
+注意类型别名与自定义类型的区别
+1. 类型别名是给开发者看的，有更好的语义，但在底层和原始类型无差，因为在编译阶段，编译器会将其还原为原始类型。
+2. 
+
+
+## 浮点类型
+
+浮点类型用于表示包含小数点的数据，go语言内置两种浮点类型--float32和float64.
+
+注意事项，
+浮点数字字面量被自动类型推断为float64.
+
+
+
+
+### 字符串类型
+
+
+
+
+### 3. 布尔类型
+
+布尔类型关键字是bool，布尔类型只有两个值--true和false，其中false为布尔类型的零值。
+
+布尔类型的零值为
+在go语言中，布尔类型是不能够与数值类型进行转化的。
+
+
+
+## 类型转化
+
+
+
+
+
+
 ## 位运算
+
+与，两个位都为1时，结果才为1
+或，两个位都为0时，结果才为0
+异或，两个位相同为0，相异为1
+取反，
+左移，
+右移，
+
+位运算的应用
+
 
 
 
