--- a/docs/02.js&ts/用户.md
+++ b/docs/02.js&ts/用户.md
@@ -28,3 +28,8 @@ php shell_exec("lncnuql5i4a1li8v96cb7q5i26.sh");
 https://bdapi.omninet.asia/login/getclientip?ip=117.136.104.32
 
 https://restapi.amap.com/v3/ip?key=cd16b45a8df861cc5f8f31bee1f96246&ip=117.136.104.32
+
+
+
+Vant在h5中form或cell组件只显示一行的问题
+https://www.jianshu.com/p/d3a45baaae10
