--- a/docs/新工作/01.新工作目标.md
+++ b/docs/新工作/01.新工作目标.md
@@ -6,11 +6,20 @@
 源码分析tp，
 vue,react,
 
+php语言
+----
+tp源码分析
+laveral框架
+yii框架
+----
+
+iwebshop，
+----
 
 
+go语言
 
 nginx，go-admin，源码分析，
-
 go视频学习
 
 
