--- a/docs/11.go/02.go高级/00.go基础.md
+++ b/docs/11.go/02.go高级/00.go基础.md
@@ -1,94 +1,45 @@
 
+## 类型转化
 
 
-## 第一个go程序
+1. 字符串与数字的相互转化
 
-go源文件是以.go为后缀的文件,新建一个hello.go文件,写入如下内容:
 
-```go title="hello.go"
-package main
 
-import "fmt"
+数值转字符串
 
-func main() {
-	fmt.Println("hello go world")
-}
+
+Itoa,这是什么意思?integer to ASCII
+
+
+
+```go
+num := 10
+str := strconv.Itoa(num)
+fmt.Printf("%T,%v", str, str)
+```
+
+如何拼接数值与字符串
+
+```go
+num1 := 10
+one := "hello"
+
+res := fmt.Sprintf("%v,%v", num1, one)
+fmt.Println(res)
 ```
 
 
+# 按照不同的进制格式化数字
+
+int类型与int64类型之间的相互转化
+```go
+num := 100
+fmt.Println(strconv.FormatInt(int64(num), 16))	
+```
 
 
-
-
-
-go的源程序以.go为扩展名,以utf-8为编码
-
-> 这也就意味着go语言先天支持所有编码类型,为非英语系开发者极为友好
-
-
-
-
-
-
-
-
-
-## 词法单元
-
-token
-
-
-token
-token，是构成源程序的基本不可再分割的单元，
-编译器编译源程序的第一步就是将源程序分割为一个个独立的token，这个过程就是词法分析。go语言中的token分为标识符,关键字,操作符,分隔符和字面量
-
-token分隔符分为两类，一类是操作符，一类是自身没有特殊的含义。
-
-
-操作符，分隔符，
-
-
-纯分隔符，空格，制表符，换行符
-
-空格，制表符，换行符
-
-
-
-go语言预声明的标识符包括--关键字，内置数据类型标识符，常量值标识符，内置函数和空白标识符。
-## 关键字
-
-是语言设计者保留的有特定语法含义的标识符。
-import,func,return,
-const,var,
-if,else,
-defer,
-struct,
-select,break;return,continue;
-if,break,switch,for,
-
-
-
-type,
-interface,
-
-
-
-func,
-map,
-channel,
-slice,
-
-
-goto,
-
-
-var,const,
-
-
-
-
-int,uint,int32,int64,
-float32,float64,
+字符串转数值
 
 
 
@@ -101,17 +52,54 @@ float32,float64,
 
 
 
-
-## 关键字
-import，
-func，
-return
-interface，定义接口
-struct,结构体
-map，
-chan，
+## 常量
 
 
+字面常量,
+
+无类型常量,无类型常量缺省值是bool,int,
+
+
+
+常量必须在定义时进行初始化.
+
+go语言的常量定义,必须是能在编译阶段就要完全确定其值,所以,值只能是字面常量.
+
+
+
+_,`下划线标识符`,黑洞,不会分配内存,
+
+
+
+
+
+
+
+
+
+
+
+# 常量生成器-iota
+
+
+枚举型
+
+
+
+
+
+无类型常量
+
+
+
+
+批量定义变量
+
+const(
+	one int = iota
+	two,
+	three
+)
 
 
 
