--- a/docs/11.go/02.go高级/04.类型系统.md
+++ b/docs/11.go/02.go高级/04.类型系统.md
@@ -1,6 +1,138 @@
+## 字面量
+
+何为字面量
 
 
-## 位运算
+
+## 标识符
+- 由字母,数字,下划线组成,且首字母不能是数字
+- 对大小写敏感
+- 不能使用语言关键字作为标识符,不要使用预定义的标识符
+
+标识符的两种风格
+多单词时
+1. 大驼峰,所有单词的首字母大写
+2. 小驼峰,除第一个字母小写,其他单词首字母大写
+3. 下划线
+
+
+由于go语言的标识符的可见性,如果标识符需要对外可见只能使用大驼峰,仅包内可见时,使用小驼峰.
+
+
+
+
+
+
+
+
+## 数据类型
+
+
+### 整型
+
+在go语言中,根据值的取值范围不同,将整型分为8位,16为,32位,64位,又分为有符号和无符号--int8,int16,int32,int64,uint8,uint16,uint32,uint64,共计8种,以适应不同的场景需要.
+
+此外还有int,uint,intptr三种类型
+其中是int,uint是和硬件平台相关的类型,但值得注意的是,即使
+
+
+在go语言中,任意两种不同的类型,显式的类型转化
+
+整型之间的类型转化
+
+
+通变量类型int,float,string 都可以使用 type (a)这种形式来进行强制类型转换,比如
+
+
+
+
+
+
+
+浮点型
+
+浮点型用于表示包含小数点的数据,go语言内置两种浮点类型,分为float32和float64,
+
+关于浮点型有两个注意事项:
+
+1. 浮点类型字面量被自动推断为float64类型.
+
+2. 计算机很难对浮点型进行精确的表示和存储,因此两个浮点数之间不应该使用==或!=进行比较操作,高精度的科学计算应该使用math标准库.
+
+
+
+NaN,not a number
+
+
+
+
+
+## 字符串类型
+
+在go语言中,字符串是原生的基本类型.可以使用字符串字面量进行初始化.
+
+
+
+1. 字符串是常量
+
+> 可以通过索引访问其字节单元,但是无法修改.
+
+
+
+1. 
+
+
+
+byte,是uint8的类型别名
+rune,是int32的类型别名,强调字符
+
+int32转化为字符串.
+
+```go
+str1 := "hello world"
+str2 := "hello,张三"
+
+fmt.Println("str1 length", len(str1))
+fmt.Println("str2 length", len(str2))
+```	
+
+len函数获取到的长度是字节数,而非字符数.
+一个utf-8编码的中文,占用3字节,因此,字符串`hello,张三`的长度的为12
+
+如何获取字符串的字符长度
+
+
+
+
+
+
+
+
+# 常量
+
+
+
+在go语言中,常量的值必须在编译阶段就能确定其值,这也就意味着go语言的常量值,只能是常量字面量.如数值,字符串,布尔.
+
+
+
+
+
+## 常量生成器--iota
+
+在常量声明时可使用常量生成器--iota,用于批量生成相同类型的且有规律的值,而不是诸葛显式的写出.
+
+> 常量声明中,iota从0开始取值,主项加1
+
+
+
+
+
+
+
+
+
+在变量声明中,如果没有显式的指定类型,无类型常量会隐式转换成该变量的默认类型.
 
 
 
