--- a/docs/21.linux/11.nginx/01.nginx安装.md
+++ b/docs/21.linux/11.nginx/01.nginx安装.md
@@ -3,6 +3,94 @@
 
 please enter passphrase for disk 
 
+
+# nginx简介
+
+高性能的,http服务器,反向代理服务器
+
+
+
+术语解释
+
+- web服务器
+- http协议,超文本传输协议
+
+
+
+- pop3,邮局协议第3版
+- 
+
+
+
+
+## nginx安装
+
+准备工作
+
+```bash
+yum install gcc zlib zlib-devel openssl openssl-devel pcre pcre-devel
+```
+
+
+源码安装
+
+
+
+源码简单安装
+http://nginx.org/download/nginx-1.22.1.tar.gz
+tar -zxvf nginx-1.22.1.tar.gz
+cd nginx-1.22.1
+./configure
+make && make install
+
+
+
+源码复杂安装
+http://nginx.org/download/nginx-1.22.1.tar.gz
+tar -zxvf nginx-1.22.1.tar.gz
+cd nginx-1.22.1
+./configure
+
+
+./configure --help
+
+--prefix
+--sbin-path=
+--conf-path=/etc/nginx/
+--error-log-path=
+--pid-path=
+
+
+./configure --prefix=/usr/local/nginx --conf-path=/etc/nginx/ --pid-path=/usr/local/nginx/nginx.pid
+
+
+
+
+
+
+
+
+
+
+make && make install
+
+
+
+
+
+http://nginx.org/download/nginx-1.26.1.tar.gz
+
+
+
+yum安装
+
+
+
+
+
+
+
+
 # 网络配置
 
 ## 配置dns
