--- a/docs/11.go/01.go基础/04.类型系统3.md
+++ b/docs/11.go/01.go基础/04.类型系统3.md
@@ -22,6 +22,13 @@ byte，uintptr，
 2. 
 
 
+int和int32是两种不同的类型
+
+关于int,int32，int64类型的选择?
+
+
+
+
 ## 浮点类型
 
 浮点类型用于表示包含小数点的数据，go语言内置两种浮点类型--float32和float64.
